--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="shortcut icon" href="favicon/favicon.ico"/>
+    <title>StackSec - Hacking, Exploit and vulnerability documentation</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="typewriter.js"></script>
+    <link rel="stylesheet" type="text/css" href="stacksec.css">
+    
+    <meta charset="UTF-8">
+    <meta name="description" content="A site with documentation about security, exploits and vulnerabilities. Want to know more about hacking tools? You'll find it here!">
+    <meta name="keywords" content="security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,meta,sploit,payload,scanning,nmap,black,white,grey,hat,information,info,book,write,information security">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<!-- BODY -->
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- HEADER -->
+            <div class"col">
+                <nav class="navbar navbar-inverse">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">StackSec</a>
+                </nav>
+            </div>
+            <br /><br />
+            <!-- END OF HEADER -->
+            <div class="col-sm-2">
+                <!-- NAV -->
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <h4>0xN4V</h4>
+                            <ul class="nav navbar-nav">
+                                <li><a href="#" data-chaffle="en">>> HOME</a></li>
+                                <li><a href="data.html" data-chaffle="en">DOCS</a></li>
+                                <li><a href="readme.html" data-chaffle="en">README.TXT</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <!-- END OF NAV -->
+            </div>
+            <!-- CONTENT -->
+            <div class="col-sm-8">
+                <div class="container-fluid">
+                    <h1>Hello World!</h1>
+                    <br />
+                    <p href="" class="typewrite" data-period="2000" data-type='["\"There are few sources of energy so powerful as a procrastinating college student.\""]'><span class="wrap"></span></p>
+                    <hr />
+                    <div class="row">
+                        <h4>0xR3C3NT_UPL04D5</h4>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+                        </div>
+                        <div class="col-sm-9">
+                            <a href="articles/netcat.html">Netcat</a>
+                            <p>Netcat (often abbreviated to nc) is a computer networking utility for reading from and writing to network connections using TCP or UDP. Netcat is designed to be a dependable back-end that can be used directly or easily driven by other programs and scripts. At the same time, it is a feature-rich network debugging and investigation tool, since it can produce almost any kind of connection its user could need and has a number of built-in capabilities.</p>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+                        </div>
+                        <div class="col-sm-9">
+                            <a href="articles/nikto.html">Nikto - Web Scanner Tutorial</a>
+                            <p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+                        </div>
+                        <div class="col-sm-9">
+                            <a href="articles/theharvester.html">TheHarvester - Information Gathering Tutorial</a>
+                            <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different pulic sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/heartbleed.png" alt="Heartbleed" height="90" width="75">
+                        </div>
+                        <div class="col-sm-9">
+                            <a href="articles/heartbleed.html">Heartbleed vulnerability</a>
+                            <p>Heartbleed is a vulnerability in the OpenSSL implementation - OpenSSL implemented the widely used protocols: SSL (Secure Sockets Layer) and TLS (Transport Layer Security). The flaw in OpenSSL gives an attacker the ability to extract encrypted data from TLS/SSL secured networks.</p>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/KRACK-logo-small.png" alt="KRACK" height="70" width="75">
+                        </div>
+                        <div class="col-sm-9">
+                            <a href="articles/krack.html">KRACK WPA2 exploitation</a>
+                            <p>Under construction</p>
+                    </div>
+                    <br />
+                </div>
+            </div>
+            <!-- QuickNav bar
+            <div class="col-sm-2">
+                <h4>0xP0PUL4R<h4>
+                <br />
+                <div id="links">
+                    <div class="row">
+                        <a href="articles/heartbleed.html">>> Heartbleed vulnerability</a>
+                    </div>
+                    <br />
+                    <div class="row">
+                        <a href="articles/krack.html">>> KRACK WPA2 exploitation</a>
+                    </div>
+                </div>
+            </div> -->
+            <!-- END OF CONTENT -->
+            <!-- SCRIPTS -->
+            <script src="chaffle/chaffle.min.js" charset="utf-8"></script>
+            <script>
+                var elements = document.querySelectorAll('[data-chaffle]');
+                var elm = document.querySelectorAll('[data-chaffle-onLoad]');
+
+                Array.prototype.forEach.call(elements, function (el) {
+                    var chaffle = new Chaffle(el)
+                    el.addEventListener('mouseover', function () {
+                        chaffle.init();
+                    });
+                });
+
+                Array.prototype.forEach.call(elm, function (el) {
+                    var chaffle = new Chaffle(el, {
+                        delay: 200
+                    })
+                    setInterval(function(){
+                        chaffle.init();
+                    }, 8000)
+                });
+            </script>
+            <!-- END OF SCRIPTS -->
+        </div>
+    </div>
+<!-- END OF BODY -->
+</body>
+</html>
