--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
-    <title>StackSec - Hacking, vulnerability and exploit documentation</title>
+    <title>Sohvaxus - Hacking, vulnerability and exploit documentation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">StackSec</a>
+                    <a class="navbar-brand" href="#">Sohvaxus</a>
                 </nav>
             </div>
             <br /><br />
@@ -125,7 +125,7 @@
                     <br /><br />
                     <h4>0xWR1T3UP5</h4>
                     <br /><br />
-                    <div class="row top-buffer">
+                    <!-- <div class="row top-buffer">
                         <div class="col-sm-2">
                             <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
                         </div>
@@ -133,7 +133,7 @@
                             <a href="articles/are-you-secure.html">Are you secure?</a>
                             <p>Under construction</p>
                         </div>
-                    </div>
+                    </div>-->
                     <br />
                 </div>
             </div>
