--- a/readme.html
+++ b/readme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
-    <title>StackSec - ReadMe.txt</title>
+    <title>Sohvaxus - ReadMe.txt</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">StackSec</a>
+                    <a class="navbar-brand" href="#">Sohvaxus</a>
                 </nav>
             </div>
             <br /><br />
