--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
-    <title>StackSec - Hacking, Exploit and vulnerability documentation</title>
+    <title>Sohvaxus - Hacking, Exploit and vulnerability documentation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -42,14 +42,14 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <p>General<p>
                             <ul class="nav navbar-nav">
-                                <li><a href="/index.php"> HOME</a></li>
-                                <li><a href="/data.php">DOCS</a></li>
-                                <li><a href="/readme.php">README.TXT</a></li>
+                                <li><a href="/index.html"> HOME</a></li>
+                                <li><a href="/data.html">DOCS</a></li>
+                                <li><a href="/readme.html">README.TXT</a></li>
                             </ul>
                             <p>CTF<p>
                             <ul class="nav navbar-nav">
-                                <li><a href="/ctf-writeup.php">WRITE-UP</a></li>
-                                <li><a href="/ctf-tutorial.php">TUTORIAL</a></li>
+                                <li><a href="/ctf-writeup.html">WRITE-UP</a></li>
+                                <li><a href="/ctf-tutorial.html">TUTORIAL</a></li>
                             </ul>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                             <img src="images/jerry.png" alt="Jerry" height="90" width="90">
                         </div>
                         <div class="col-sm-9">
-                            <a href="CTF/writeup/htb/jerry.php">HackTheBox.eu - Jerry</a>
+                            <a href="CTF/writeup/htb/jerry.html">HackTheBox.eu - Jerry</a>
                             <p>Jerry was one of the easiest boxes i've done so far. It was very straight forward with no rabbit holes. Unfortunatly there was no priv esc, as the user and root flag were together in the same file.</p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                             <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
                         </div>
                         <div class="col-sm-9">
-                            <a href="articles/netcat.php">Netcat</a>
+                            <a href="articles/netcat.html">Netcat</a>
                             <p>Netcat (often abbreviated to nc) is a computer networking utility for reading from and writing to network connections using TCP or UDP. Netcat is designed to be a dependable back-end that can be used directly or easily driven by other programs and scripts. At the same time, it is a feature-rich network debugging and investigation tool, since it can produce almost any kind of connection its user could need and has a number of built-in capabilities.</p>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                             <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
                         </div>
                         <div class="col-sm-9">
-                            <a href="articles/nikto.php">Nikto - Web Scanner Tutorial</a>
+                            <a href="articles/nikto.html">Nikto - Web Scanner Tutorial</a>
                             <p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                             <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
                         </div>
                         <div class="col-sm-9">
-                            <a href="articles/theharvester.php">TheHarvester - Information Gathering Tutorial</a>
+                            <a href="articles/theharvester.html">TheHarvester - Information Gathering Tutorial</a>
                             <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different pulic sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             <img src="images/heartbleed.png" alt="Heartbleed" height="90" width="75">
                         </div>
                         <div class="col-sm-9">
-                            <a href="articles/heartbleed.php">Heartbleed vulnerability</a>
+                            <a href="articles/heartbleed.html">Heartbleed vulnerability</a>
                             <p>Heartbleed is a vulnerability in the OpenSSL implementation - OpenSSL implemented the widely used protocols: SSL (Secure Sockets Layer) and TLS (Transport Layer Security). The flaw in OpenSSL gives an attacker the ability to extract encrypted data from TLS/SSL secured networks.</p>
                         </div>
                     </div>
