--- a/readme.html
+++ b/readme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
-    <title>StackSec - ReadMe.txt</title>
+    <title>Sohvaxus - ReadMe.txt</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="stacksec.css">
     
     <meta charset="UTF-8">
-    <meta name="description" content="StackSec security documentation">
+    <meta name="description" content="Sohvaxus security documentation">
     <meta name="keywords" content="security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,meta,sploit,payload,scanning,nmap,black,white,grey,hat,information,info,book,write">
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,11 +22,38 @@
     <div class="container-fluid">
         <div class="row">
             <!-- HEADER -->
-            <?php include './PHP/header.php'?>
+            <div class"col">
+                <nav class="navbar navbar-inverse">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">Sohvaxus</a>
+                </nav>
+            </div>
+            <br /><br />
             <!-- END OF HEADER -->
             <div class="col-sm-2">
                 <!-- NAV -->
-                <?php include './PHP/navbar.php'?>
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <p>General<p>
+                            <ul class="nav navbar-nav">
+                                <li><a href="/index.html"> HOME</a></li>
+                                <li><a href="/data.html">DOCS</a></li>
+                                <li><a href="/readme.html">README.TXT</a></li>
+                            </ul>
+                            <p>CTF<p>
+                            <ul class="nav navbar-nav">
+                                <li><a href="/ctf-writeup.html">WRITE-UP</a></li>
+                                <li><a href="/ctf-tutorial.html">TUTORIAL</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
                 <!-- END OF NAV -->
             </div>
             <!-- CONTENT -->
