--- a/readme.html
+++ b/readme.html
@@ -70,7 +70,7 @@
                         <br />
                         <center><p> All data presented on this site is put here for educational purposes. Whatever you learn here, can be used in a good way, or in a bad way. I'm not your dad so i can't tell you what to do or what not to do. Also me, or any authors on this site can not be held responsible for your actions. So use this information responsibly.</p>
                         <p>This website is a collection of documentation about subjects that i find interesting. I learn best by taking a subject, and then write a bunch of documentation about it. Also by documenting these subjects, it's very easy to look them up in the future, should i've forgotten some commands or details.</p>
-                        <p>The reason i put this documentation online, is because maybe other people can benefit from it somehow. I try to be as detailed as possible, because that's how in the end you really understand a subject. If you see any mistakes in my documentation, feel free to let me know via email: mistakes@stacksec.info, and i will adjust my documentation accordingly.</p>
+                        <p>The reason i put this documentation online, is because maybe other people can benefit from it somehow. I try to be as detailed as possible, because that's how in the end you really understand a subject.</p>
                         <p>Enjoy the free information! :)</p>
                         </center>
                     </div>
