--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
                     <br />
                     <div class="row top-buffer">
                         <div class="col-sm-2">
+                            <img src="images/tools-icon-white.png" alt="FCrackZip" height="75" width="75">
+                        </div>
+                        <div class="col-sm-10">
+                            <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip</a>
+                            <p>How to brute forcing ZIP files with FCrackZip.</p>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
                             <img src="images/jerry.png" alt="Jerry" height="90" width="90">
                         </div>
                         <div class="col-sm-9">
