--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <div class="col-sm-10">
                             <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip</a>
                             <p>How to brute forcing ZIP files with FCrackZip.</p>
+                            <p>Added: 27 march 2019</p>
                         </div>
                     </div>
                     <br />
@@ -84,6 +85,7 @@
                         <div class="col-sm-9">
                             <a href="CTF/writeup/htb/jerry.html">HackTheBox.eu - Jerry</a>
                             <p>Jerry was one of the easiest boxes i've done so far. It was very straight forward with no rabbit holes. Unfortunatly there was no priv esc, as the user and root flag were together in the same file.</p>
+                            <p>Added: 12 january 2019</p>
                         </div>
                     </div>
                     <br />
@@ -94,6 +96,7 @@
                         <div class="col-sm-9">
                             <a href="articles/netcat.html">Netcat</a>
                             <p>Netcat (often abbreviated to nc) is a computer networking utility for reading from and writing to network connections using TCP or UDP. Netcat is designed to be a dependable back-end that can be used directly or easily driven by other programs and scripts. At the same time, it is a feature-rich network debugging and investigation tool, since it can produce almost any kind of connection its user could need and has a number of built-in capabilities.</p>
+                            <p>Added: 12 january 2019</p>
                         </div>
                     </div>
                     <br />
@@ -104,6 +107,7 @@
                         <div class="col-sm-9">
                             <a href="articles/nikto.html">Nikto - Web Scanner Tutorial</a>
                             <p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
+                            <p>Added: 21 november 2018</p>
                         </div>
                     </div>
                     <br />
@@ -114,6 +118,7 @@
                         <div class="col-sm-9">
                             <a href="articles/theharvester.html">TheHarvester - Information Gathering Tutorial</a>
                             <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different pulic sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
+                            <p>Added: 21 november 2018</p>
                         </div>
                     </div>
                     <br />
@@ -124,6 +129,7 @@
                         <div class="col-sm-9">
                             <a href="articles/heartbleed.html">Heartbleed vulnerability</a>
                             <p>Heartbleed is a vulnerability in the OpenSSL implementation - OpenSSL implemented the widely used protocols: SSL (Secure Sockets Layer) and TLS (Transport Layer Security). The flaw in OpenSSL gives an attacker the ability to extract encrypted data from TLS/SSL secured networks.</p>
+                            <p>Added: 21 november 2018</p>
                         </div>
                     </div>
                     <!--<br />
