--- a/data.html
+++ b/data.html
@@ -76,7 +76,7 @@
                         <div class="col-sm-10">
                             <a href="articles/heartbleed.html">Heartbleed vulnerability</a>
                             <p>Heartbleed is a vulnerability in the OpenSSL implementation - OpenSSL implemented the widely used protocols: SSL (Secure Sockets Layer) and TLS (Transport Layer Security). The flaw in OpenSSL gives an attacker the ability to extract encrypted data from TLS/SSL secured networks.</p>
-                            <p>Added: 21 november 2018</p>
+                            <i><p>Added: 21 november 2018</p></i>
                         </div>
                     </div>
                     <br />
@@ -104,7 +104,7 @@
                         <div class="col-sm-10">
                             <a href="articles/theharvester.html">TheHarvester</a>
                             <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different public sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
-                            <p>Added: 21 november 2018</p>
+                            <i><p>Added: 21 november 2018</p></i>
                         </div>
                     </div>
                     <br />
@@ -115,7 +115,7 @@
                         <div class="col-sm-10">
                             <a href="articles/nikto.html">Nikto</a>
                             <p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
-                            <p>Added: 21 november 2018</p>
+                            <i><p>Added: 21 november 2018</p></i>
                         </div>
                     </div>
                     <br />
@@ -126,7 +126,7 @@
                         <div class="col-sm-10">
                             <a href="articles/netcat.html">Netcat</a>
                             <p>Netcat (often abbreviated to nc) is a computer networking utility for reading from and writing to network connections using TCP or UDP. Netcat is designed to be a dependable back-end that can be used directly or easily driven by other programs and scripts. At the same time, it is a feature-rich network debugging and investigation tool, since it can produce almost any kind of connection its user could need and has a number of built-in capabilities.</p>
-                            <p>Added: 21 november 2018</p>
+                            <i><p>Added: 21 november 2018</p></i>
                         </div>
                     </div>
                     <br />
