--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <img src="images/tools-icon-white.png" alt="FCrackZip" height="75" width="75">
                         </div>
                         <div class="col-sm-10">
-                            <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip</a>
-                            <p>How to brute force ZIP files with FCrackZip.</p>
+                            <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip - ZIP Bruteforce Tutorial</a>
+                            <p><i>fcrackzip</i> searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
                             <p>Added: 27 march 2019</p>
                         </div>
                     </div>
