--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <br />
                     <div class="row top-buffer">
                         <div class="col-sm-2">
-                            <img src="images/tools-icon-white.png" alt="FCrackZip" height="75" width="75">
+                            <img src="images/zip.png" alt="FCrackZip" height="75" width="75">
                         </div>
                         <div class="col-sm-10">
                             <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip - ZIP Bruteforce Tutorial</a>
