--- a/data.html
+++ b/data.html
@@ -119,7 +119,13 @@
                         </div>
                     </div>
                     <br />
-                    <div class="row top-buffer">
+                    <ul>
+                        <li>
+                            <h6>Connection</h6>
+                        </li>
+                    </ul>
+                    <br />
+                     <div class="row top-buffer">
                         <div class="col-sm-2">
                             <img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
                         </div>
