--- a/data.html
+++ b/data.html
@@ -91,9 +91,9 @@
                     </div>-->
                     <h4>0xT00L5</h4>
                     <br />
-                    <ul>
+                    <ul style="list-style-type:none">
                         <li>
-                            <h6>OSINT</h6>
+                            <u><h6>OSINT</h6></u>
                         </li>
                     </ul>
                     <br />
@@ -119,9 +119,9 @@
                         </div>
                     </div>
                     <br />
-                    <ul>
+                    <ul style="list-style-type:none">
                         <li>
-                            <h6>Connection</h6>
+                            <u><h6>Connection</h6></u>
                         </li>
                     </ul>
                     <br />
