--- a/content/ssh.html
+++ b/content/ssh.html
@@ -150,7 +150,7 @@
 											<p>ssh -L &lt;LPORT&gt;:&lt;RHOST&gt;:&lt;RPORT&gt; user@&lt;RHOST&gt;</p>
 										</code>
 										<br />
-										<p>The command will create an SSH tunnel on port 22 and route all traffic trough this tunnel to the server. This means that if you execute the command below, then navigate to <strong>http://localhost:8080</strong> in a browser, you will be able to navigate to the webserver on port 80 through the SSH tunnel. The green arrow in the schema above represents the SSH tunnel.</p>
+										<p>The command will create an SSH tunnel on port 22 and route all traffic through this tunnel to the server. This means that if you execute the command below, then navigate to <strong>http://localhost:8080</strong> in a browser, you will be able to navigate to the webserver on port 80 through the SSH tunnel. The green arrow in the schema above represents the SSH tunnel.</p>
 										<br />
 										<li>Remote Port Forwarding</li>
 
