--- a/content/ssh.html
+++ b/content/ssh.html
@@ -67,9 +67,9 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  	<h1>SSH - Tunneling, port forwarding and proxy tutorial</h1>
+					  	<h1>SSH</h1>
+						<center><p><i>Tunneling, port forwarding and proxy tutorial</i></p></center>
 					<!-- InstanceEndEditable -->
-					<br />
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
 						<ol class="breadcrumb">
