--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -67,9 +67,9 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>TheHarvester Information Gathering Tool</h1>
+					  	<h1>TheHarvester</h1>
+						<center><p><i>Information Gathering Tool</i></p></center>
 					<!-- InstanceEndEditable -->
-					<br />
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
 						<ol class="breadcrumb">
