--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -67,9 +67,9 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>How to bruteforce ZIP files with FCrackZip</h1>
+					  	<h1>FCrackZip</h1>
+						<center><p><i>How to bruteforce ZIP files</i></p></center>
 					<!-- InstanceEndEditable -->
-					<br />
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
 						<ol class="breadcrumb">
