--- a/content/jerry.html
+++ b/content/jerry.html
@@ -67,9 +67,9 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>Jerry</h1>
+					  	<h1>Jerry</h1>
+						<center><p><i>Walkthrough</i></p></center>
 					<!-- InstanceEndEditable -->
-					<br />
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
 						<ol class="breadcrumb">
