--- a/readme.html
+++ b/readme.html
@@ -68,7 +68,7 @@
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="content" -->
 						<h1>0xR34DM3.TXT</h1>
-						<hr />
+						<hr class="solid">
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 							<li class="breadcrumb-item active">ReadMe.txt</li>
