--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -80,12 +80,7 @@
 					    </ol>
 						<div class="row top-buffer">
 							<div class="col-sm-8">
-								<table class="table table-bordered">
-									<thead>
-									<tr>
-										<th colspan="2">0x5UMM4RY</th>
-									</tr>
-									</thead>
+								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
 									<tbody>
 										<tr>
