Update table layout

--- a/content/jerry.html
+++ b/content/jerry.html
@@ -80,6 +80,39 @@
 					    </ol>
 						<div class="row top-buffer">
 						<!-- ARTICLE CONTENT -->
+						<div class="col-sm-8">
+								<table class="table">
+									<!-- InstanceBeginEditable name="table" -->
+									<tbody>
+									  <tr>
+									    <td>OS:</td>
+									    <td><img src="../images/win.png" alt="Jerry" style="max-height:20px;max-width:20px;padding-right:5px;" class="image">Windows</td>
+								      </tr>
+									  <tr>
+									    <td>Difficulty:</td>
+									    <td>Easy</td>
+								      </tr>
+									  <tr>
+									    <td>Points:</td>
+									    <td>20</td>
+								      </tr>
+									  <tr>
+									    <td>Release:</td>
+									    <td>30 jun 2018</td>
+								      </tr>
+									  <tr>
+									    <td>IP:</td>
+									    <td>10.10.10.95</td>
+								      </tr>
+								    </tbody>
+									<!-- InstanceEndEditable -->
+								</table>
+						  </div>
+						<div class="col-sm-4">
+							<!-- InstanceBeginEditable name="image" -->
+							<center><img src="../images/jerry_table.png" alt="Jerry" style="max-height:200px;max-width:200px;" class="image"></center>
+							<!-- InstanceEndEditable --></div>
+						</div>
 						<p>0xL1NK#~ <a href="hackthebox.eu">HackTheBox.eu</a></p>
 						<br />
 						<!-- InstanceBeginEditable name="article" -->
@@ -229,7 +262,6 @@
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
-				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
 					var elm = document.querySelectorAll('[data-chaffle-onLoad]');
