--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -125,18 +125,18 @@
                             <p>You would want to use this tool when you are curious about the visibility of your company on the internet or for information gathering purposes during a penetration test.</p>
                             <li><h5>Cheatsheet</h5></li>
                              <code>
-                                <p># Syntax</p>
-                                <p>theharvester -d [domain] -l [amount of depthness] -b [search engines] -f [filename]</p>
+# Syntax
+theharvester -d [domain] -l [amount of depthness] -b [search engines] -f [filename]
                             </code>
                             <br />
                             <code>
-                                <p># Basic scan of the given domain, returns 500 results for each search engine.</p>
-                                <p>theharvester -d google.com -l 500 -b all</p>
+# Basic scan of the given domain, returns 500 results for each search engine.
+theharvester -d google.com -l 500 -b all
                             </code>
                             <br />
                             <code>
-                                <p># Output your scan results to a visual report in HTML format
-                                <p>theharvester -d google.com -l 500 -b all -f results.html</p>
+# Output your scan results to a visual report in HTML format
+theharvester -d google.com -l 500 -b all -f results.html
                             </code>
                             <br />
                             <p><strong>-d</strong> : Specifies the domain to scan</p>
