--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2" id="content-img">
+										<img src="images/craft_table.png" alt="Craft" height="90" width="90">
+									</div>
+									<div class="col-sm-10">
+										<a href="content/craft.html">HackTheBox.eu - Craft</a>
+										<p><i>25 february 2020</i></p>
+										<p>The user portion of this box revolves around the Gogs Craft API. We have to exploit an eval() vulnerability and dump a database to get the user flag. In order to gain root we have to exploit an application called Vault.</p>
+										<span>Tags:</span>
+										<a class="tag">htb</a>
+										<a class="tag">hackthebox</a>
+										<a class="tag">craft</a>
+										<a class="tag">writeup</a>
+										<a class="tag">walkthrough</a>
+									</div>
+								</div>
+								<hr class="solid">
+							</li>
+							<li>
+								<div class="row top-buffer">
+									<div class="col-sm-2" id="content-img">
 										<img src="images/ssh.png" alt="SSH" height="75" width="75">
 									</div>
 									<div class="col-sm-10">
@@ -114,7 +133,7 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2" id="content-img">
-										<img src="images/jerry.png" alt="Jerry" height="90" width="90">
+										<img src="images/jerry_table.png" alt="Jerry" height="90" width="90">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/jerry.html">HackTheBox.eu - Jerry</a>
@@ -125,6 +144,7 @@
 										<a class="tag">hackthebox</a>
 										<a class="tag">jerry</a>
 										<a class="tag">writeup</a>
+										<a class="tag">walkthrough</a>
 									</div>
 								</div>
 								<hr class="solid">
