--- a/content/netcat.html
+++ b/content/netcat.html
@@ -128,77 +128,75 @@
 					        </li>
 						    <p>Make a connection on a given port. Start the listener on the system that will receive the connection.</p>
 						    <code>
-						      <p># Start the listener on a given [port] and launch /bin/sh shell when a connection is made.</p>
-						      <p>nc -lvp [port] -e /bin/sh</p>
-						      <br />
-						      <p># Example</p>
-						      <p>nc -lvp 4444 -e /bin/sh</p>
+# Start the listener on a given [port] and launch /bin/sh shell when a connection is made.
+nc -lvp [port] -e /bin/sh
+
+# Example
+nc -lvp 4444 -e /bin/sh
 					        </code> <br />
 						    <p>Establish a connection to the listening host on the given port.</p>
 						    <code>
-						      <p># Establish connection.</p>
-						      <p>nc [IP address] [port]</p>
-						      <br />
-						      <p># Example</p>
-						      <p>nc 192.168.0.1 4444</p>
+# Establish connection.
+nc [IP address] [port]
+
+# Example
+nc 192.168.0.1 4444
 					        </code> <br />
 						    <p><b><u>Transfer a file</u></b></p>
 						    <p>On the <span style="color:red;">receiving</span> end, start the listener on a given port. The connection will output the input from the connection in your specified filename.</p>
 						    <code>
-						      <p># Start the listener on a given [port]. The connection will output the input from the connection in your specified [file].</p>
-						      <p>nc -l -p [port] > [file]</p>
-						      <br />
-						      <p># Example</p>
-						      <p>nc -l -p 4444 > filename.txt</p>
-						      <p># Example with verbose output</p>
-						      <p>nc -lvp 4444 > filename.txt</p>
+# Start the listener on a given [port]. The connection will output the input from the connection in your specified [file].
+nc -l -p [port] > [file]
+
+# Example
+nc -l -p 4444 > filename.txt
+# Example with verbose output
+nc -lvp 4444 > filename.txt
 					        </code> <br />
 						    <p>On the <span style="color:red;">sending</span> end, stablish a connection to the listening port. Input the filename you want to transfer to the destination.</p>
 						    <code>
-						      <p># Establish connection and input the [file]</p>
-						      <p>nc -w 3 [destination] [port] < [file]</p>
-						      <br />
-						      <p># Example</p>
-						      <p>nc -w 3 192.168.0.1 4444 < filename.txt</p>
+# Establish connection and input the [file]
+nc -w 3 [destination] [port] < [file]
+
+# Example
+nc -w 3 192.168.0.1 4444 < filename.txt
 					        </code> <br />
 						    <p><b><u>Simple portscan</u></b></p>
 						    <p>The following command will probe port 1 to 100 on a target. Both successful and unsuccessful connections will be displayed.</p>
 						    <code>
-						      <p># Syntax</p>
-						      <p>nc -z -v [Target IP] [Port range]</p>
-						      <p># Example</p>
-						      <p>nc -z -v localhost 1-100</p>
+# Syntax
+nc -z -v [Target IP] [Port range]
+# Example
+nc -z -v localhost 1-100
 					        </code> <br />
 						    <p>This will output the following:</p>
 						    <code>
-						      <pre>
-	...
-	nc: connect to localhost port 51 (tcp) failed: Connection refused
-	nc: connect to localhost port 52 (tcp) failed: Connection refused
-	<span style=color:yellow;>Connection to localhost 53 port [tcp/domain] succeeded!</span>
-	nc: connect to localhost port 54 (tcp) failed: Connection refused
-	nc: connect to localhost port 55 (tcp) failed: Connection refused
-	nc: connect to localhost port 56 (tcp) failed: Connection refused
-	...
-	nc: connect to localhost port 77 (tcp) failed: Connection refused
-	nc: connect to localhost port 78 (tcp) failed: Connection refused
-	nc: connect to localhost port 79 (tcp) failed: Connection refused
-	<span style=color:yellow;>Connection to localhost 80 port [tcp/http] succeeded!</span>
-	nc: connect to localhost port 81 (tcp) failed: Connection refused
-	nc: connect to localhost port 82 (tcp) failed: Connection refused
-	nc: connect to localhost port 83 (tcp) failed: Connection refused
-	...
-									</pre>
+...
+nc: connect to localhost port 51 (tcp) failed: Connection refused
+nc: connect to localhost port 52 (tcp) failed: Connection refused
+<span style=color:yellow;>Connection to localhost 53 port [tcp/domain] succeeded!</span>
+nc: connect to localhost port 54 (tcp) failed: Connection refused
+nc: connect to localhost port 55 (tcp) failed: Connection refused
+nc: connect to localhost port 56 (tcp) failed: Connection refused
+...
+nc: connect to localhost port 77 (tcp) failed: Connection refused
+nc: connect to localhost port 78 (tcp) failed: Connection refused
+nc: connect to localhost port 79 (tcp) failed: Connection refused
+<span style=color:yellow;>Connection to localhost 80 port [tcp/http] succeeded!</span>
+nc: connect to localhost port 81 (tcp) failed: Connection refused
+nc: connect to localhost port 82 (tcp) failed: Connection refused
+nc: connect to localhost port 83 (tcp) failed: Connection refused
+...
 					        </code> <br />
 						    <p>To only display successful connections, use the following command:</p>
 						    <p><i><strong>Note:</strong> Only " ... | grep succeeded" will not work. 2>&1 causes stderr of a program to be written to the same file descriptor as stdout. nc writes to stderr by default, pipe will only get stdout hence grep will miss the data.</i></p>
 						    <code>
-						      <p>nc -z -v localhost 1-100 2>&1 | grep succeeded</p>
+nc -z -v localhost 1-100 2>&1 | grep succeeded
 					        </code> <br />
 						    <p>This outputs only the following:</p>
 						    <code>
-						      <p>Connection to localhost 53 port [tcp/domain] succeeded!</p>
-						      <p>Connection to localhost 80 port [tcp/http] succeeded!</p>
+Connection to localhost 53 port [tcp/domain] succeeded!
+Connection to localhost 80 port [tcp/http] succeeded!
 					        </code> <br />
 						    <p><strong>-l</strong> : Specifies Netcat to listen for an incoming connection. (can not be used with: -s, -p and -z)</p>
 						    <p><strong>-v</strong> : Specifies Netcat to give more verbose output.</p>
