--- a/content/nikto.html
+++ b/content/nikto.html
@@ -132,45 +132,45 @@
 								<br />
 								<p>Scan the target 192.168.1.1 on port 80. Port 80 is the default port if none is given.</p>
 								<code>
-									<p># Syntax</p>
-									<p>nikto -h [target IP] -p [port](,[port],[port],...)</p>
-									<p># Syntax alternative</p>
-									<p>nikto -h https://[target IP]:[port]/</p>
-									<br />
-									<p># Example</p>
-									<p>nikto -h 192.168.1.1</p>
+# Syntax
+nikto -h [target IP] -p [port](,[port],[port],...)
+# Syntax alternative
+nikto -h https://[target IP]:[port]/
+
+# Example
+nikto -h 192.168.1.1
 								</code>
 								<br />
 								<p>Scan the target 192.168.1.1 on port 443. Multiple ports can be used, seperated by a comma or specified by a range.</p>
 								<code>
-									<p># Example</p>
-									<p>nikto -h 192.168.1.1 -p 443</p>
-									<br />
-									<p># Multiple ports - Comma serperated</p>
-									<p>nikto -h 192.168.1.1 -p 80,8080,443</p>
-									<br />
-									<p># Multiple ports - Specified range</p>
-									<p>nikto -h 192.168.1.1 -p 80-90</p>
+# Example
+nikto -h 192.168.1.1 -p 443
+
+# Multiple ports - Comma serperated
+nikto -h 192.168.1.1 -p 80,8080,443
+
+# Multiple ports - Specified range
+nikto -h 192.168.1.1 -p 80-90
 								</code>
 								<br />
 								<p>Scan the target 192.168.1.1 on port 443. Nikto will check HTTP port 80 first by default, and if that fails, HTTPS port 443. If you're sure it's an SSL server, you can use the -s (-ssl) parameter. This will speed up the process.</p>
 								<code>
-									<p># Example</p>
-									<p>nikto -h 192.168.1.1 -p 443 -ssl</p>
+# Example
+nikto -h 192.168.1.1 -p 443 -ssl
 								</code>
 								<br />
 								<p>Scan through a proxy server.</p>
 								<code>
-									<p># Syntax</p>
-									<p>nikto -h [target IP] -p [port] -useproxy [proxy IP]</p>
-									<br />
-									<p># Example</p>
-									<p>nikto -h 192.168.0.1 -p 443 -useproxy 127.0.0.1:8080</p>
+# Syntax
+nikto -h [target IP] -p [port] -useproxy [proxy IP]
+
+# Example
+nikto -h 192.168.0.1 -p 443 -useproxy 127.0.0.1:8080
 								</code>
 								<br />
 								<p><u>Update Nikto</u></p>
 								<code>
-									<p>nikto -update</p>
+nikto -update
 								</code>
 								<br />
 								<p><strong>-h</strong> : Specifies the target host</p>
